refactor(core): remove Java 17 specific POJO deserialization and unify logic
Deleted Java 17-specific ConfigToPojoDeserializer and ObjectDeserializer files.
Refactored ConfigToPojoDeserializer to handle both records and normal classes
in a single implementation, improving clarity and reuse. Added deserializeToRecord
method to ObjectDeserializer to support Java records. Also updated YamlWriter,
YamlFormat, and YamlParser for better YAML processing and formatting consistency.

Test code reorganized by moving tests from java17 and java11 source sets to common
java source set to unify testing.

These changes simplify codebase, remove redundancy, and improve support for Java
records in deserialization without maintaining multiple versions of the same logic.
No functional API changes intended.